# fastshmul

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  justfile  pyproject.toml
fastshmul/: Cargo.toml
fastshmul-py/: Cargo.toml  README.md
fastshmul-py/src/: lib.rs
fastshmul/src/: errors.rs  irreps.rs  lib.rs  o3.rs  parity.rs
