[package]
name = "fastshmul-py"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fast_shmul_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.21.2"
